--- a/src/App.css
+++ b/src/App.css
@@ -108,3 +108,13 @@ p {
     margin: 10px;
   }
 }
+
+.card {
+  display: inline-block;
+  border: 1px solid black;
+  box-shadow: 0 2px 2px #ccc;
+  width: 500px;
+  height: 450px;
+  padding: 20px;
+  margin: 20px;
+}
