--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -68,7 +68,7 @@
 
 .background {
     overflow: hidden;
-    background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
+    background: black;
     height: 100vh;
 }
 
