--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -182,6 +182,14 @@
     background-size: cover;
     border: 1px solid black;
 }
+.pos { 
+    background-image: url("../img/pointOfSale.png");
+    height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 1px solid black;
+}
 
 .mytext {
     font-size: 1.2rem;
@@ -323,7 +331,7 @@
     color: white;
 }
 
-.gtfinder:hover .overlay, .conkeeper:hover .overlay, .itlogger:hover .overlay  {
+.gtfinder:hover .overlay, .conkeeper:hover .overlay, .pos:hover .overlay, .itlogger:hover .overlay  {
     opacity: 1;
 }
 
