--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,15 @@ p {
   margin: 30px;
 }
 
+.card {
+  position: absolute;
+  width: 95%;
+  height: 420px;
+  display: inline-block;
+  border: 1px solid black;
+  box-shadow: 0 2px 2px #ccc;
+}
+
 @media all and (max-width: 450px) {
   :root {
     --fontsize-nav: 1rem;
@@ -97,7 +106,14 @@ p {
   .App {
     flex-direction: column;
   }
-
+  .card {
+    position: absolute;
+    width: 100%;
+    height: 600px;
+    display: inline-block;
+    border: 1px solid black;
+    box-shadow: 0 2px 2px #ccc;
+  }
   .condiv {
     padding: 50px;
   }
@@ -109,14 +125,7 @@ p {
   }
 }
 
-.card {
-  position: absolute;
-  width: 530px;
-  height: 400px;
-  display: inline-block;
-  border: 1px solid black;
-  box-shadow: 0 2px 2px #ccc;
-}
+
 
 .slick-slide.slick-center img {
   transform: scale(1.1);
